--- a/Jour1/Job02/docker-ibrahim/src/App.css
+++ b/Jour1/Job02/docker-ibrahim/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: black !important;
+  background-color: rgb(248, 26, 181) !important;
   min-height: 100vh;
 }
 
